# quant_strategy

./: .gitignore  AMA.py  DSMO.py  Quantitative_Deployment_Proposal.md  README.md  SMFI.py  config.py  daily_signal.py  implementation_plan.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily_signal.yml
analysis/: audit.py  cross_validate.py  optimize.py
automation/: daily_signal.py
backtest/: __init__.py  engine.py  metrics.py
data/: __init__.py  loader.py
historical_data/: AAPL.csv  AMZN.csv  GOOGL.csv  META.csv  MSFT.csv  NVDA.csv  QQQ.csv  SPY.csv  TSLA.csv
indicators/: __init__.py
logs/: QQQ_detailed.csv  QQQ_metrics.txt
risk/: __init__.py  controls.py
strategy/: __init__.py  adx.py  composite.py  dynamic_weights.py  hmm.py  hysteresis.py  ml_weights.py  regime.py  signal.py
utils/: __init__.py  logging.py
web/: server.py
web/static/: app.js  index.html  style.css
