[project]
name = "quant-strategy"
version = "0.1.0"
description = "Multi-indicator quant strategy with AMA, SMFI, DSMO — continuous signal, HMM regime, dynamic weights"
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "yfinance>=0.2.30",
    "requests>=2.28.0",
    "hmmlearn>=0.3.0",
    "backtesting>=0.3.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = []
